[package]
name = "chain_access"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.101"
thiserror = "2"
alloy = "1.6.3"
tokio = { version = "1.49.0", features = ["time", "rt"] }
tempo-alloy = { git = "https://github.com/tempoxyz/tempo", version = "1.1.2" }
clap = { version = "4", features = ["derive"] }
