[package]
name = "stablectl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
domain = "0.11.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.89"
chain_access = { path = "../chain_access" }
hex = "0.4"
alloy-primitives = "1.5.6"
