[package]
name = "stablectl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.89"
chain_access = { path = "../chain_access" }
alloy = "1.6.3"
comfy-table = "7"
indicatif   = "0.17"
console     = "0.15"
temp-env = "0.3.6"
privy-rs = "0.1.0-alpha"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
temp-env = "0.3"